[block-team-member] Fix content vertical align (basic, plain, horizontal layouts)

--- a/src/block/team-member/style.scss
+++ b/src/block/team-member/style.scss
@@ -21,8 +21,13 @@
 		flex-direction: column;
 		text-align: center;
 	}
+	&.ugb-team-member--design-half,
+	&.ugb-team-member--design-horizontal {
+		.ugb-team-member__content {
+			flex: 1;
+		}
+	}
 	.ugb-team-member__content {
-		flex: 1;
 		display: flex;
 		flex-direction: column;
 		background-size: cover;
